--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body style ="background-color:#FFA794 ;">
 
 <h1 style = "font-size: 45px;">Kellen Stewart</h1>
-<p><img src="me.jpg" width="200" height="300"></p>
+<p><img src="Me.jpg" width="200" height="300"></p>
 
 <p>I was born in Albany, NY in 2004
 <br>I am a finance and Information management technology dual major
